# Voice-Assistant-App

./: README.md  build.gradle  gradle.properties  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voiceassist/: MainActivity.kt
app/src/main/java/com/voiceassist/api/: LlmData.kt  LlmRepository.kt  LlmService.kt
app/src/main/java/com/voiceassist/model/: Message.kt
app/src/main/java/com/voiceassist/ui/: MessageAdapter.kt
app/src/main/java/com/voiceassist/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: circular_progress.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
cpp/: CMakeLists.txt
cpp/include/: audio_manager.h  llm_client.h  voice_assistant.h  voice_recognizer.h
cpp/src/: audio_manager.cpp  llm_client.cpp  main.cpp  voice_assistant.cpp  voice_recognizer.cpp
